# buildbuddy-minimal-llvm

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  main.cc
