module(name = "buildbuddy_minimal_llvm")

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "llvm", version = "0.8.8")

llvm = use_extension("@llvm//extensions:llvm.bzl", "llvm")
use_repo(llvm, "llvm-project")

# Register toolchains through the scoped repo to ensure this codepath works.
llvm_toolchains = use_extension("@llvm//extensions:toolchain.bzl", "toolchain")
use_repo(llvm_toolchains, "llvm_toolchains")

register_toolchains("@llvm_toolchains//:all")

# Bump transitive zlib version to avoid genrules.
bazel_dep(name = "zlib", version = "1.3.1.bcr.8")
